basis for project frontend
